--- a/elohim-app/src/index.html
+++ b/elohim-app/src/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NSL7PVP55B"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-NSL7PVP55B');
+  </script>
   <meta charset="utf-8">
   <title>elohim.host - Digital Infrastructure for Human Flourishing</title>
   <base href="/">
